8164590: javac --inherit-runtime-environment fails with "cannot find modules: ALL-DEFAULT"
Reviewed-by: mchung